# flask_fullstack

./: .gitignore  build-config.js  package.json  pyproject.toml  webpack.config.js
app/: __init__.py  models.py  routers.py
app/assets/js/: webflow.js
app/controllers/: article.py  auth.py  dashboard.py  file_upload.py  journal.py  submission.py  user.py
app/controllers/frontend/: about.py  advanced.py  articles.py  blog.py  conferences.py  contact.py  faq.py  home.py  not_found.py  privacy_policy.py  publications.py  terms.py
app/repository/: article.py  in_review.py  journal.py  user.py
app/service/: article.py  in_review.py  journal.py  user.py
app/static/javascripts/: dashboard.js  webflow.js
app/static/javascripts/richtexteditor/: rte.js
app/static/javascripts/validation/: password.js  validation.js
app/static/styles/: alert.css  app.css  dashboard.css  ipmugo-build.webflow.css  main.css
app/templates/: alert.html  dashboard-layout.html  header.html  layout.html  sidebar.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: index.html
app/templates/dashboard/article/: edit.html  index.html
app/templates/dashboard/in_review/: index.html
app/templates/dashboard/journal/: add.html  edit.html  (+1 more)
app/templates/frontend/: 404.html  about.html  advanced.html  article_detail.html  articles.html  blog.html  conference.html  contact.html  faqs.html  index.html  privacy-policy.html  publication_detail.html  publications.html  terms-and-conditions.html
app/utils/: login_required.py  scrapping_article.py  scrapping_in_review.py
(+7 files in other folders)
